fix spacing and homepage text overlap

--- a/themes/carolkappus/assets/sass/main.sass
+++ b/themes/carolkappus/assets/sass/main.sass
@@ -15,8 +15,7 @@ h1, h2, h3
   margin-bottom: 1rem
   padding-bottom: 0.25rem
   border-bottom: 1px solid #ccc
-  line-height: 40px
-
+  
 p.lead
   font-size: 1.5rem
 
@@ -112,13 +111,24 @@ ol.song
 .scotland 
   background: url("/performances/scotland-flag.jpg")
 
+/* for the homepage  */
+@media (max-width: 768px)
+  .hide-small
+    display: none
+
+@media (min-width: 768px)
+  .show-small
+    display: block
+
+  
 .shop 
+  .col-md-3,.col-md-4
+    margin-bottom: 2rem
   h1
     margin-top: 0
   h4
     font-size: 1.4rem
   .title
-    padding-top: 1rem
     display: inline-block
     a
       color: black
@@ -138,7 +148,7 @@ ol.song
     -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
     -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75)
-    margin-bottom: 2rem
+    margin-bottom: 1.2rem
   a .cover:hover
     -webkit-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75)
     -moz-box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75)
